[package]
name = "b2ghald"
version = "0.1.0"
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"

[dependencies]
bincode = "1.3"
env_logger = "0.8"
log = "0.4"
nix = "0.20"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "b2ghald"
path = "src/daemon.rs"

[[bin]]
name = "b2ghalctl"
path = "src/client.rs"
