[package]
authors = ["Fabrice Desré <fabrice@desre.org>"]
edition = "2018"
license = "AGPL-3.0-only"
name = "b2ghald"
version = "0.1.3"

[dependencies]
bincode = "1.3"
clap = {version = "3.0", features = ["derive"], optional = true}
env_logger = {version = "0.10", default-features = false}
log = "0.4"
nix = {version = "0.27", default-features = false, features = ["reboot", "time"]}
serde = {version = "1.0", features = ["derive"]}

[features]
default = []
cmdline = ["clap", "nix/fs"]

[[bin]]
name = "b2ghald"
path = "src/daemon.rs"

[[bin]]
name = "b2ghalctl"
path = "src/ctl.rs"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
